Kubernetes/pgadmin/pgadmin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: admin@admin.fr
            - name: PGADMIN_DEFAULT_PASSWORD
              value: admin
          image: dpage/pgadmin4
          name: pgadmin4-container
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
